--- a/DarkThemeExtension/popup/popup.html
+++ b/DarkThemeExtension/popup/popup.html
@@ -16,7 +16,7 @@
     <nav class="menu">
   <ol>
     <li class="menu-item"><a href="#0">Custom Theme</a></li>
-    <li class="menu-item"><a href="#0">Docs</a></li>
+    <li class="menu-item"><a href="https://github.com/AIFFELDaegu/LmsDraculaTheme" target="_blank">Docs</a></li>
     <li class="menu-item">
       <a href="#0">Color</a>
       <ol class="sub-menu">
